<resources>
    <!-- Standard Stuff-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="vpn_enable">VPN ENABLE</string>

    <string name="picker_box_arrows_icon">picker box arrows icon</string>
    <string name="cell_image">cell image</string>
    <string name="title">Direct Select for Android</string>
    <string name="subtitle">New iOS and Android control for you and your company. Please make sure to use it properly, if you have any questions, please create an issue on our GitHub account.</string>
    <string name="customized_picker">Here a fully customized picker with custom background and cell layout:</string>
    <string name="picker_with_custom_bg">Here a picker with default cell but custom background:</string>
    <string name="footer_text">by Ramotion inc.</string>
    <string name="empty_text" />

    <!-- App Stuff-->
    <string name="app_name">Imperial VPN</string>
    <string name="notification_default">Tap to connect</string>
    <string name="notification_find_servers">Find servers</string>
    <string name="notification_connecting">"Сonnecting to "</string>
    <string name="notification_connected">"Сonnected to "</string>
    <string name="location">Location:</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>
    <string name="speed_kb">0 Kb/s</string>
    <string name="speed_kb_current">\" Kb/s\"</string>


</resources>