<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:layout_centerInParent="true"
    android:gravity="center">

    <RelativeLayout
        android:id="@+id/custom_cell_root"
        android:layout_width="177dp"
        android:layout_height="53.87dp"
        android:layout_centerVertical="true"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/custom_cell_image"
            android:layout_width="28.22dp"
            android:layout_height="28.22dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/cell_image"
            android:scaleType="centerCrop"
            android:scaleX="1.14"
            android:scaleY="1.14"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            />

        <TextView
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:id="@+id/custom_cell_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@id/custom_cell_image"
            android:layout_toRightOf="@id/custom_cell_image"
            android:layout_toStartOf="@id/picker_box_arrows"
            android:layout_toLeftOf="@id/picker_box_arrows"
            android:fontFamily="@font/rubikregular"
            android:gravity="center_horizontal"
            android:text="@string/empty_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/picker_box_arrows"
            android:layout_width="13dp"
            android:layout_height="16dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/picker_box_arrows_icon"
            android:scaleType="fitCenter"
            android:layout_marginEnd="24.8dp"
            android:layout_marginRight="10dp"
            android:alpha="0"
            />

    </RelativeLayout>




</RelativeLayout>





