<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ds="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/name_app_part"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08964646464">

        <TextView
            android:id="@+id/text_name_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubikmedium"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center_horizontal" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <!--
    <com.ramotion.directselect.DSListView
        android:id="@+id/ds_county_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ds_list_bg"
        android:visibility="invisible"
        ds:picker_box_view="@id/ds_country_picker"
        ds:scale_animations="true"
        ds:scale_animations_factor="1.15"
        ds:scale_animations_pivot_center="true"
        ds:selected_index="2"
        ds:selector_background="@drawable/ds_bg_list_selector"
        tools:layout_editor_absoluteX="-8dp"
        tools:layout_editor_absoluteY="-56dp" >

    </com.ramotion.directselect.DSListView>
        -->


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/country_part"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/button_part"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_app_part"
        app:layout_constraintVertical_bias="0.5">

                <TextView
                    android:id="@+id/text_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubikregular"
                    android:gravity="center_horizontal"
                    android:text="@string/location"
                    android:textAlignment="center"
                    android:textColor="@color/text_option"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

        <com.ak.ui.CountryCodePicker
            android:id="@+id/ccp_phone"
            android:layout_width="177dp"
            android:layout_height="53.87dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/ds_bg_picker_box"
            android:gravity="center"
            app:contentColor="@color/white"
            app:defaultNameCode="in"
            app:fontFamily="@font/rubikregular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_country"
            app:showArrowDown="true"
            app:showFlag="true"
            app:showNameCode="false" />

        <!--app:excludedCountries="ad,ae" -->
    <!--
                    <com.ramotion.directselect.examples.advanced.AdvancedExampleCountryPickerBox
                        android:id="@+id/ds_country_picker"
                        android:layout_width="177dp"
                        android:layout_height="53.87dp"
                        android:layout_marginTop="6dp"
                        android:background="@drawable/ds_bg_picker_box"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_country">

                    </com.ramotion.directselect.examples.advanced.AdvancedExampleCountryPickerBox>
                  -->


    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/info_part"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <View
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.54433497536"
            />

        <ImageView
            android:id="@+id/upper_layer_rectangle"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.45566502464"
            android:src="@drawable/upper_layer_rectangle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            android:contentDescription="upper layer rectangle" />



    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/upper_buttons_part"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_notification"
        app:layout_constraintVertical_bias="0.5">

        <include
            android:id="@+id/upper_upload_button"
            layout="@layout/upper_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <include
            android:id="@+id/upper_download_button"
            layout="@layout/upper_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="84dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/text_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubikregular"
        android:text="Tap to connect"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/upper_buttons_part"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_part" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/button_part"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <ImageView
            android:id="@+id/upper_layer_circle"
            android:layout_width="238dp"
            android:layout_height="238dp"
            android:src="@drawable/upper_layer_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/button_vpn"
            layout="@layout/button_vpn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/vpn_enable"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>










    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal" />


</androidx.constraintlayout.widget.ConstraintLayout>